# dactylo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: words-en.txt
docs/: index.html
src/: config.rs  history.rs  jsonl.rs  main.rs  mistakes.rs  session.rs  stats.rs  words.rs
src/ui/: chrome.rs  config.rs  mod.rs  results.rs  typing.rs  weaknesses.rs
